# shuttle-launchpad-examples

./: .gitignore  Readme.md
launchpad-issue-1/: Cargo.toml
launchpad-issue-1/src/: main.rs
launchpad-issue-10/: Cargo.toml  Readme.md
launchpad-issue-10/src/: main.rs
launchpad-issue-10/static/css/: style.css
launchpad-issue-10/templates/: index.html
launchpad-issue-2/: .gitignore  Cargo.toml
launchpad-issue-2/src/: main.rs
launchpad-issue-3/: Cargo.toml
launchpad-issue-3/src/: main.rs
launchpad-issue-4/: Cargo.toml
launchpad-issue-4/src/: main.rs
launchpad-issue-6/: Cargo.toml  README.md  schema.sql
launchpad-issue-6/src/: main.rs
launchpad-issue-8/: Cargo.toml  README.md
launchpad-issue-8/src/: main.rs
