[package]
name = "sudokusolver"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.18.0"
axum = { version = "0.6.18", features = ["json"] }
shuttle-axum = "0.18.0"
tokio = "1.28.2"
serde_json = "1.0.99"
serde = "1.0.164"
